--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "json-loader": "^0.5.4",
     "ncp": "^2.0.0",
     "node-uuid": "^1.4.7",
-    "onsenui": "^2.0.4",
+    "onsenui": "~2.8.1",
     "postcss-loader": "^1.0.0",
+    "postcss-cssnext": "^3.0.2",
     "promise": "^7.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-onsenui": "^1.0.4",
+    "react-hot-loader": "^3.1.3",
+    "react-onsenui": "^1.9.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
