--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "ncp": "^2.0.0",
     "node-uuid": "^1.4.7",
     "onsenui": "~2.8.1",
-    "postcss-loader": "^1.0.0",
     "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^1.0.0",
     "promise": "^7.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
@@ -56,5 +56,15 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "android-versions": "^1.2.1",
+    "cordova-android": "^6.4.0",
+    "cordova-plugin-whitelist": "1"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    }
   }
 }
