--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-onsenui-redux-weather",
   "version": "1.0.0",
-  "description": "Simple Weather App implemntation with Onsen UI React Components and Redux",
-  "main": "index.js",
+  "description": "Simple Weather App implementation with Onsen UI React Components and Redux",
+  "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --progress --content-base www/",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --host 0.0.0.0 --port 8000 --content-base www/",
     "build": "npm run lint && cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "deploy": "npm run build && git commit www -m \"Deploy\" && git subtree push --prefix www origin gh-pages",
-    "lint": "eslint ."
+    "lint": "eslint src/"
   },
   "repository": {
     "type": "git",
@@ -33,14 +33,20 @@
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^6.4.1",
     "eslint-plugin-standard": "^2.0.0",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.28.0",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "ncp": "^2.0.0",
     "node-uuid": "^1.4.7",
     "onsenui": "~2.8.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "postcss": "^6.0.11",
+    "postcss-base64": "^0.7.1",
     "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-smart-import": "^0.7.5",
+    "postcss-url": "^7.1.2",
     "promise": "^7.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
@@ -50,12 +56,12 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
     "android-versions": "^1.2.1",
