--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --hot --host 0.0.0.0 --port 8000 --content-base www/",
-    "build": "npm run lint && cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build": "npm run lint && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "deploy": "npm run build && git commit www -m \"Deploy\" && git subtree push --prefix www origin gh-pages",
     "lint": "eslint src/"
   },
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^6.4.1",
     "eslint-plugin-standard": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "isomorphic-fetch": "^2.2.1",
@@ -40,7 +41,6 @@
     "ncp": "^2.0.0",
     "node-uuid": "^1.4.7",
     "onsenui": "~2.8.1",
-    "extract-text-webpack-plugin": "^2.1.0",
     "postcss": "^6.0.11",
     "postcss-base64": "^0.7.1",
     "postcss-cssnext": "^3.0.2",
@@ -57,8 +57,6 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.18.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^3.8.1",
     "webpack-dev-server": "2.7.1"
