--- a/package.json
+++ b/package.json
@@ -64,11 +64,21 @@
   "dependencies": {
     "android-versions": "^1.2.1",
     "cordova-android": "^6.4.0",
+    "cordova-plugin-crosswalk-webview": "^2.3.0",
+    "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-whitelist": "1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-crosswalk-webview": {
+        "XWALK_VERSION": "23+",
+        "XWALK_LITEVERSION": "xwalk_core_library_canary:17+",
+        "XWALK_COMMANDLINE": "--disable-pull-to-refresh-effect",
+        "XWALK_MODE": "embedded",
+        "XWALK_MULTIPLEAPK": "true"
+      }
     }
   }
 }
