--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "cordova-android": "^6.4.0",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-whitelist": "1"
+    "cordova-plugin-whitelist": "1",
+    "redux-localstorage": "^0.4.1"
   },
   "cordova": {
     "plugins": {
