--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --hot --host 0.0.0.0 --port 8000 --content-base www/",
     "build": "npm run lint && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "deploy": "npm run build && git commit www -m \"Deploy\" && git subtree push --prefix www origin gh-pages",
+    "serve": "cross-env NODE_ENV=production webpack-dev-server --host 0.0.0.0 --port 8000 --content-base www/",
     "lint": "eslint src/"
   },
   "repository": {
